--- a/_posts/2025-01-05-2024-in-review.md
+++ b/_posts/2025-01-05-2024-in-review.md
@@ -5,8 +5,8 @@ tags: []
 classes: wide
 
 header:
-  teaser: /assets/images/posts/spending-some-quality-time-with-the-heart-nebula/HeartNebula_SHO_with_rgb_stars.jpg
-
+  teaser: /assets/images/posts/2024-in-review/theAstroShed-2024-collage.jpg
+  
 gallery:
   - image_path: /assets/images/posts/spending-some-quality-time-with-the-heart-nebula/HeartNebula_SHO_with_rgb_stars.jpg
     title: Heart Nebula (SHO with RGB stars, 40 hours)
@@ -14,7 +14,7 @@ gallery:
     title: M45/Pleiades (RGB, 24 hours)
   - image_path: /assets/images/posts/quickshot-the-north-america-nebula/NorthAmericaNebula-SHO-with-RGB-Stars.jpg
     title: Quick Process - North America Nebula (SHO with RGB stars, ~18 hours)
-  - image_path: assets/images/posts/first-remote-imaging-veil-nebula-and-m101/VeilNebula-RGB-4.5hrs.jpg
+  - image_path: /assets/images/posts/first-remote-imaging-veil-nebula-and-m101/VeilNebula-RGB-4.5hrs.jpg
     title: Veil Nebula (SHO with RGB stars, ~4.5 hours)
   - image_path: /assets/images/posts/quickshot-the-crescent-nebula-ncg-6888/crescent-rgb.jpg
     title: Crescent Nebula (RGB)
@@ -23,18 +23,19 @@ gallery:
   - image_path: /assets/images/posts/first-remote-imaging-veil-nebula-and-m101/M101-150x180s-crop.jpg
     title: M101 (RGB, ~7.5 hours)
   - image_path: /assets/images/posts/the-horsehead-nebula-in-rgb-plus-narrowband/Horsehead_Nebula_RGB_Plus_NB_2000px.jpg
-    title: Horsehead and Flame Nebulas (SHO with RGB stars, 36 hours)
+    title: Horsehead and Flame Nebulas (RGB w/ RGB stars, with narrowband blended in, 36 hours)
 
 ---
 
 2024 was a great year for theAstroShed, and I gathered a lot of faint light 
 from far away. By far the image that I was happiest with was the Heart Nebula, 
-but the Horsehead/Flame nebulas and Pleiades aren't far behind. 
+but the Horsehead/Flame nebulas and Pleiades aren't far behind. Click through to see
+bigger images.
 
 <!--more-->
 {%
-  include figure image_path="/assets/images/posts/spending-some-quality-time-with-the-heart-nebula/HeartNebula_SHO_with_rgb_stars.jpg"
-  caption="The Heart Nebula (SHO with RGB stars, 40 hours)"
+  include figure image_path="assets/images/posts/2024-in-review/theAstroShed-2024-collage.jpg"
+  caption="2024 Collage"
 %}
 
 I've been refining my [image processing](/my-rgb-and-sho-workflows-2024-edition/)
@@ -45,12 +46,14 @@ You can jump to the [2024 index](/year-archive/#2024) if you want to see additio
 details, but I've gathered some of the images here to serve as an index of sorts.
 
 {%
-  include figure image_path="/assets/images/posts/pleiades-m45-has-some-dark-secrets/Pleiades_RGB_2000px.jpg"
-  caption="Dark whispies in Pleiades"
+  include figure image_path="/assets/images/posts/spending-some-quality-time-with-the-heart-nebula/HeartNebula_SHO_with_rgb_stars.jpg"
+  caption="Heart Nebula (SHO with RGB stars, 40 hours)"
 %}
 
 I've already got some quality time on IC 405 & IC 410, but that's for another
 day (and after I get a lot more data!)
 
-{% include gallery id="gallery" caption="Click an image to see it bigger with some high-level acquisition info" %}
+Thanks for looking, be sure to follow me on [AstroBin](http://www.astrobin.com/users/jamiesmithnc/)!
+
+{% include gallery id="gallery" caption="Click an image to flip through the gallery and see some high-level acquisition" %}
 
