--- a/_posts/2025-01-05-2024-in-review.md
+++ b/_posts/2025-01-05-2024-in-review.md
@@ -55,5 +55,5 @@ day (and after I get a lot more data!)
 
 Thanks for looking, be sure to follow me on [AstroBin](http://www.astrobin.com/users/jamiesmithnc/)!
 
-{% include gallery id="gallery" caption="Click an image to flip through the gallery and see some high-level acquisition" %}
+{% include gallery id="gallery" caption="Click an image to flip through the gallery and see some high-level acquisition info" %}
 
